增加自动查询费率及自动订阅行情的日志消息 登录日志消息更加详细 当持仓量为0时不再计算保证金（从而减少了查询费率的次数） 修复了登录时订阅持仓合约行情实际无效的 Bug 修复了断网重连时不会发出 ConnectionEventType.TD_NET_CONNECTED 事件的 Bug 完善了 module-info.java